refactor(AuthService/authenticate): the readability of the authenticate method has improved